Added a small github thingy at the bottom

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 				);
 			</script>
 		      <div class="container navbar-fixed-bottom">
-		        <p class="text-muted">Made with <3 by Luke D'Alfonso &copy;2017 </p>
+		        <p class="text-muted">Made with &lt;3 by Luke D'Alfonso &copy;2017 
+		        <a href="https://github.com/pokemonmegaman/lln-simulator">Check out the code on Github</a>
+		        </p>
 		      </div>
 	</body>
 </html>
